apps/setup/ingress-api-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-grafana
  namespace: producao-grafana
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    kubernetes.io/ingress.static-ip-name: fezinhadasorte-ip-external
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
spec:
  tls:
  - hosts:
    - "www.fezinhadasorte.com"
    - "fezinhadasorte.com"
    secretName: letsencrypt-fezinhadasorte
  ingressClassName: nginx
  rules:
  - host: "*fezinhadasorte.com"
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
