apps/setup/ingress-api-wordpress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: wordpress-demo
            port:
              number: 80
