apps/setup/ingress-principal-www.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal-www
  namespace: producao-nginx-ingress
  annotations:
    kubernetes.io/ingress.static-ip-name: fezinhadasorte-ip-external
    cert-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - "www.fezinhadasorte.com"
      secretName: letsencrypt-fezinhadasorte
  ingressClassName: nginx
  rules:
    - host: www.fezinhadasorte.com
