apps/setup/ingress-principal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  namespace: producao-nginx-ingress
  annotations:
    kubernetes.io/ingress.static-ip-name: fezinhadasorte-ip-external
    cert-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
    nginx.org/mergeable-ingress-type: "master"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8m"
spec:
  tls:
    - hosts:
        - "fezinhadasorte.com"
      secretName: letsencrypt-fezinhadasorte
  ingressClassName: nginx
  rules:
    - host: fezinhadasorte.com
