apps/setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-fezinhadasorte
  namespace: producao
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    kubernetes.io/ingress.static-ip-name: fezinhadasorte-ip-external
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-fezinhadasorte-cluster-issuer"
spec:
  tls:
  - hosts:
    - "www.fezinhadasorte.com"
    - "fezinhadasorte.com"
    secretName: letsencrypt-fezinhadasorte
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: campanha-microservice-clusterip-service
            port:
              number: 80
      - path: /api/cliente
        pathType: Prefix
        backend:
          service:
            name: cliente-microservice-clusterip-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              number: 80
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
  - host: fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: campanha-microservice-clusterip-service
            port:
              number: 80
      - path: /api/cliente
        pathType: Prefix
        backend:
          service:
            name: cliente-microservice-clusterip-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              number: 80
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
